--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@
 
 #home::before {
     content: "";
-    background: url('../bg1.jpg') no-repeat center center/cover;
+    background: url('./bg1.jpg') no-repeat center center/cover;
     position: absolute;
     height: 72%;
     width: 100%;
@@ -135,7 +135,7 @@
 #cleintsection::before {
     content: "";
     position: absolute;
-    background: url('../bg.jpg');
+    background: url('./bg.jpg');
     width: 100%;
     height: 54%;
     z-index: -1;
@@ -167,7 +167,7 @@ width: 100%;
 height: 100%;
 z-index: -1;
 opacity: 0.5;
-background: url('../contact.jpg') no-repeat center center/cover;
+background: url('./contact.jpg') no-repeat center center/cover;
 }
 #contact-box{
     display: flex;
